Bug 38628 - [IVB]playing some h.264 files will make GPU hang
Summary: [IVB]playing some h.264 files will make GPU hang
Status: VERIFIED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: high critical
Assignee: haihao
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-23 18:49 UTC by Hai
Modified: 2011-07-21 23:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Hai 2011-06-23 18:49:42 UTC
Environment:
CPU:IVB
OS:Fedora 13 (32 bits)
Libdrm:	(master)2.4.26
Mesa:	(7.10)1ad06c7a2573d2e3a946c8340ce2530c076c5f0b
Xserver:(server-1.10-branch)xorg-server-1.10.2.901-2-g9fab8b475de99848866c07bde962a5f6ed01b987
Xf86_video_intel:(master)2.15.0-125-g8fb98e22a63a4354b049ace7870abb6406541c28
Cairo:	(master)441f9c5037dd32464bd87e21108b702c0a3c508a
Libva:	(master)20574567f32a6ad9f46665a4ced5725df42355f1
Kernel:	(drm-intel-fixes) 6a574b5b9b186e28abd3e571dfd1700c5220b510
====================================
Description:use mplayer to play some h.264 conformance test files, the GPU will hang
Following is the dmesg info
[drm:i915_hangcheck_elapsed] *ERROR* Hangcheck timer elapsed... GPU hung
[drm] capturing error event; look for more information in /debug/dri/0/i915_error_state
[drm:i915_wait_request] *ERROR* i915_wait_request returns -11 (awaiting 31 at 23, next 32)
[drm:i915_reset] *ERROR* Failed to reset chip.

====================================
Reproduce step:
mplayer -vo vaapi -va vaapi Base_Ext_Main_profile/CABREF3_Sand_D.264 -fps 25
Comment 1 haihao 2011-07-07 01:11:23 UTC
commit 8a77e4b53681ea147717a2c784ea725f365e1323
Author: Xiang, Haihao <haihao.xiang@intel.com>
Date:   Thu Jul 7 15:55:58 2011 +0800

    i965_drv_video: fix next slice vertical position for field picture
    
    This fixes https://bugs.freedesktop.org/show_bug.cgi?id=38628
Comment 2 Hai 2011-07-21 23:55:20 UTC
Veryfied with following commit
Libdrm:		(master)2.4.26-2-gce317a6d09bb93cff73703b06e5a5bc3cc0b1c6a
Mesa:		(7.11)344db29edec11871de1158440712422e9164f41c
Xserver:		(server-1.10-branch)xorg-server-1.10.3-12-ga0b8dacbc016e38c92300ed421850e11848b8454
Xf86_video_intel:		(master)2.15.0-205-g6dbbb74bde034f5f00aee0396ccd1e03a6625fbd
Cairo:		(master)6b3e5cd39c81941a73ed709eadf8beae5407dc05
Libva:		(master)270299fc541c9f78efc43f1e87f6b7efd5373ec1
Kernel:	(drm-intel-fixes) e28f87116503f796aba4fb27d81e2c3d81966174


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.