i965_drv_video: fix next slice vertical position for field picture

This fixes https://bugs.freedesktop.org/show_bug.cgi?id=38628

Signed-off-by: Xiang, Haihao <haihao.xiang@intel.com>